--- a/index.html
+++ b/index.html
@@ -8,16 +8,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div id="board">
-        <div class="field" id="0"></div>
-        <div class="field" id="1"></div>
-        <div class="field" id="2"></div>
-        <div class="field" id="3"></div>
-        <div class="field" id="4"></div>
-        <div class="field" id="5"></div>
-        <div class="field" id="6"></div>
-        <div class="field" id="7"></div>
-        <div class="field" id="8"></div>
-    </div>
+    <div id="board"></div>
+    <p id="info"></p>
 </body>
 </html>
