--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Tic-Tac-Toe</title>
     <script src="./script-02.js" defer></script>
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" type="image/x-icon" href="./Favicon.svg">
 </head>
 <body>
     <div id="board"></div>
