Add reset button

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 <body>
     <div id="board"></div>
     <p id="info"></p>
+    <button id="reset-button">Reset the board</button>
 </body>
 </html>
